--- a/index.html
+++ b/index.html
@@ -411,6 +411,30 @@
 
         <!-- Messenger:Free alternative -->
         <td>
+          <!-- Conversations -->
+          <div class="media emph-Block">
+            <div class="media-Object">
+              <a href="#!" class="pic-Rounded">
+                <img src="img/foss/conversations.png" alt="Conversations" class="floss" />
+              </a>
+            </div>
+            <div class="media-Text">
+              <h2 class="eps">Conversations</h2>
+              <p>
+                Conversations is an XMPP client focused on ease of use and security. Supports end-to-end encryption using OTR or OpenPGP.
+              </p>
+              <ul>
+                <li>Price: $2.99 (Google Play), Free (F-Droid)</li>
+                <li>Min. Android version: 4.0</li>
+                <li><a href="https://github.com/siacs/Conversations" target="_blank">Source code</a></li>
+              </ul>
+              <hr>
+              <a href="https://play.google.com/store/apps/details?id=eu.siacs.conversations" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+              <a href="https://f-droid.org/repository/browse/?fdid=eu.siacs.conversations" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
+              <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="conversations" />
+            </div>
+          </div>
+
           <!-- Xabber -->
           <div class="media emph-Block">
             <div class="media-Object">
@@ -979,6 +1003,28 @@
 
           <!-- Notes:Free alternative -->
           <td>
+          <!-- Writeily Pro -->
+          <div class="media emph-Block">
+            <div class="media-Object">
+              <a href="#!" class="pic-Rounded">
+                <img src="img/foss/writeilypro.png" alt="Writeily Pro" class="floss" />
+              </a>
+            </div>
+            <div class="media-Text">
+              <h2 class="eps">Writeily Pro</h2>
+              <p>
+                Simple and efficient notepad featuring markdown support, folders, and a PIN lock.
+              </p>
+              <ul>
+                <li>Price: Free</li>
+                <li>Min. Android version: 4.1</li>
+                <li><a href="https://github.com/jffrymrtn/writeily-pro" target="_blank">Source code</a></li>
+              </ul>
+              <hr>
+              <a href="https://play.google.com/store/apps/details?id=me.writeily.pro" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+              <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="writeilypro" />
+            </div>
+          </div>
 
             <!-- Tomdroid -->
             <div class="media emph-Block">
@@ -1216,6 +1262,30 @@
 
           <!-- FileManager:Free alternative -->
           <td>
+            <!-- Amaze File Manager -->
+          <div class="media emph-Block">
+            <div class="media-Object">
+              <a href="#!" class="pic-Rounded">
+                <img src="img/foss/amazefilemanager.png" alt="Amaze File Manager" class="floss" />
+              </a>
+            </div>
+            <div class="media-Text">
+              <h2 class="eps">Amaze File Manager</h2>
+              <p>
+                Material designed with an app manager and many colorful skins. Compress and extract files, save bookmarks, and view history.
+              </p>
+              <ul>
+                <li>Price: Free</li>
+                <li>Min. Android version: 4.0</li>
+                <li><a href="https://github.com/arpitkh96/AmazeFileManager" target="_blank">Source code</a></li>
+              </ul>
+              <hr>
+              <a href="https://play.google.com/store/apps/details?id=com.amaze.filemanager" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+              <a href="https://f-droid.org/repository/browse/?fdid=com.amaze.filemanager" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
+              <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="amazefilemanager" />
+            </div>
+          </div>
+
             <!-- OI File Manager -->
             <div class="media emph-Block">
               <div class="media-Object">
@@ -1504,6 +1574,53 @@
               </div>
             </div>
 
+          <!-- DAVdroid -->
+          <div class="media emph-Block">
+            <div class="media-Object">
+              <a href="#!" class="pic-Rounded">
+                <img src="img/foss/davdroid.png" alt="DAVdroid" class="floss" />
+              </a>
+            </div>
+            <div class="media-Text">
+              <h2 class="eps">DAVdroid</h2>
+              <p>
+                Synchronization solution for both contacts (CardDAV) and calendars (CalDAV). Requires a hosting server.
+              </p>
+              <ul>
+                <li>Price: $3.69 (Google Play), Free (F-Droid)</li>
+                <li>Min. Android version: 4.0</li>
+                <li><a href="https://github.com/bitfireAT/davdroid" target="_blank">Source code</a></li>
+              </ul>
+              <hr>
+              <a href="https://play.google.com/store/apps/details?id=at.bitfire.davdroid" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+              <a href="https://f-droid.org/repository/browse/?fdid=at.bitfire.davdroid" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
+              <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="davdroid" />
+            </div>
+          </div>
+
+          <!-- Flock -->
+          <div class="media emph-Block">
+            <div class="media-Object">
+              <a href="#!" class="pic-Rounded">
+                <img src="img/foss/flock.png" alt="Flock" class="floss" />
+              </a>
+            </div>
+            <div class="media-Text">
+              <h2 class="eps">Flock</h2>
+              <p>
+                Securely synchronize contacts and calendars between devices. You can use your own server or pay $5 a year for hosting. Developed by <a href="https://whispersystems.org/" target="_blank">Open WhisperSystems</a>.
+              </p>
+              <ul>
+                <li>Price: Free</li>
+                <li>Min. Android version: 4.1</li>
+                <li><a href="https://github.com/whispersystems/flock" target="_blank">Source code</a></li>
+              </ul>
+              <hr>
+              <a href="https://play.google.com/store/apps/details?id=org.anhonesteffort.flock" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+              <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="flock" />
+            </div>
+          </div>
+
           </td>
 
           <!-- Cloud:Notes -->
@@ -1534,6 +1651,30 @@
 
           <!-- Office:Free alternative -->
           <td>
+          <!-- LibreOffice Viewer -->
+          <div class="media emph-Block">
+            <div class="media-Object">
+              <a href="#!" class="pic-Rounded">
+                <img src="img/foss/libreofficeviewer.png" alt="LibreOffice Viewer" class="floss" />
+              </a>
+            </div>
+            <div class="media-Text">
+              <h2 class="eps">LibreOffice Viewer</h2>
+              <p>
+                View many Open Document and Microsoft Office file formats.
+              </p>
+              <ul>
+                <li>Price: Free</li>
+                <li>Min. Android version: 4.0</li>
+                <li><a href="http://cgit.freedesktop.org/libreoffice/core/tree" target="_blank">Source code</a></li>
+              </ul>
+              <hr>
+              <a href="https://play.google.com/store/apps/details?id=com.collabora.libreoffice" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+              <a href="https://f-droid.org/repository/browse/?fdid=com.collabora.libreoffice" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
+              <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="libreofficeviewer" />
+            </div>
+          </div>
+
             <!-- OpenDocumentReader -->
             <div class="media emph-Block">
               <div class="media-Object">
@@ -1583,30 +1724,29 @@
               </div>
             </div>      
 
-            <!-- VuDroid-->
-            <div class="media emph-Block">
-              <div class="media-Object">
-                <a href="#!" class="pic-Rounded">
-                  <img src="img/foss/vudroid.png" alt="vudroid" class="floss" />
-                </a>
-              </div>
-              <div class="media-Text">
-                <h2 class="eps">VuDroid</h2>
-                <p>
-                  A document reader for DjVu and PDF files.
-                </p>
-                <ul>
-                  <li>Price: Free </li>
-                  <li>Min. Android version: 1.5</li>
-                  <li><a href="http://code.google.com/p/vudroid/source/checkout">Source code</a></li>
-                </ul>
-                <hr>
-                <a href="https://play.google.com/store/apps/details?id=org.vudroid" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
-                <a href="https://f-droid.org/repository/browse/?fdid=org.vudroid" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
-                <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="vudroid" />
-
-              </div>
-            </div>     
+          <!-- Document Viewer -->
+          <div class="media emph-Block">
+            <div class="media-Object">
+              <a href="#!" class="pic-Rounded">
+                <img src="img/foss/documentviewer.png" alt="Document Viewer" class="floss" />
+              </a>
+            </div>
+            <div class="media-Text">
+              <h2 class="eps">Document Viewer</h2>
+              <p>
+                Supports PDF, DjVu and other formats.
+              </p>
+              <ul>
+                <li>Price: Free</li>
+                <li>Min. Android version: 2.2</li>
+                <li><a href="https://github.com/dschuermann/document-viewer">Source code</a></li>
+              </ul>
+              <hr>
+              <a href="https://play.google.com/store/apps/details?id=org.sufficientlysecure.viewer" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+              <a href="https://f-droid.org/repository/browse/?fdid=org.sufficientlysecure.viewer" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
+              <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="documentviewer" />
+            </div>
+          </div>
 
             <!-- FBReader-->
             <div class="media emph-Block">
@@ -1767,7 +1907,7 @@
               <li>Barcode Scanner</li>
               <li>System Tools</li>
               <li>Geocaching</li>
-              <li>E-book reader</li>
+              <li>Google Translate</li>
               <li>Anti-theft</li>
               <li>Flappy Bird</li>
             </ul>
@@ -1846,6 +1986,30 @@
               </div>
             </div>
 
+          <!-- Mitzuli -->
+          <div class="media emph-Block">
+            <div class="media-Object">
+              <a href="#!" class="pic-Rounded">
+                <img src="img/foss/mitzuli.png" alt="Mitzuli" class="floss" />
+              </a>
+            </div>
+            <div class="media-Text">
+              <h2 class="eps">Mitzuli</h2>
+              <p>
+                Offline/online translator for a variety of languages. Supports text, voice, and image input.
+              </p>
+              <ul>
+                <li>Price: Free</li>
+                <li>Min. Android version: 2.2</li>
+                <li><a href="https://github.com/artetxem/mitzuli" target="_blank">Source code</a></li>
+              </ul>
+              <hr>
+              <a href="https://play.google.com/store/apps/details?id=com.mitzuli" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+              <a href="https://f-droid.org/repository/browse/?fdid=com.mitzuli" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
+              <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="mitzuli" />
+            </div>
+          </div>
+
             <!-- Prey-->
             <div class="media emph-Block">
               <div class="media-Object">
@@ -1890,7 +2054,31 @@
                 <a href="https://play.google.com/store/apps/details?id=com.quchen.flappycow" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
                 <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="flappycow" />
               </div>
-            </div>   
+            </div>
+
+          <!-- QuickLyric -->
+          <div class="media emph-Block">
+            <div class="media-Object">
+              <a href="#!" class="pic-Rounded">
+                <img src="img/foss/quicklyric.png" alt="QuickLyric" class="floss" />
+              </a>
+            </div>
+            <div class="media-Text">
+              <h2 class="eps">QuickLyric</h2>
+              <p>
+                Get lyrics for the music you're currently listening to or search for specific songs.
+              </p>
+              <ul>
+                <li>Price: Free</li>
+                <li>Min. Android version: 4.0</li>
+                <li><a href="https://github.com/geecko86/QuickLyric" target="_blank">Source code</a></li>
+              </ul>
+              <hr>
+              <a href="https://play.google.com/store/apps/details?id=com.geecko.QuickLyric" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+              <a href="https://f-droid.org/repository/browse/?fdid=com.geecko.QuickLyric" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
+              <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="quicklyric" />
+            </div>
+          </div>   
           </td>
 
           <!-- Misc:Notes -->
@@ -1967,7 +2155,7 @@
     <a href="http://pages.github.com" title="GitHub Pages">
       GitHub Pages
     </a>
- Last update: 10. January 2015, 14:42
+ Last update: 05. April 2015, 00:00
   </p>
   <p>
     Logos and images can be under copyright and trademarked of their respective companies.
