--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
             <a href="https://en.wikipedia.org/wiki/Off-the-Record_Messaging" target="_blank">OTR</a> stands for off-the-record, a form of end-to-end encryption. End-to-end encryption ensures that only the person with whom you're communicating can decrypt your message. 
           </p>
           <p>
-            <a href="http://thoughtcrime.org/blog/telegram-crypto-challenge/">Be careful</a> with relying on Telegram's encryption as they are not end-to-end encrypted by default. All messages are stored on their servers except when using the "secret chat" option.
+            <a href="http://thoughtcrime.org/blog/telegram-crypto-challenge/">Be careful</a> with trusting Telegram's encryption. They are also not end-to-end encrypted by default. All messages are stored on their servers except when using the "secret chat" option.
           </td>
         </tr>
       </table>
