--- a/index.html
+++ b/index.html
@@ -992,7 +992,7 @@
               <div class="media-Text">
                 <h2 class="eps">NoteCipher</h2>
                 <p>
-                  NoteCipher protects your notes with a password.
+                  NoteCipher encrypts your notes.
                 </p>
                 <ul>
                   <li>Price: Free</li>
