--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <li><a href="https://github.com/anthonycr/Lightning-Browser" target="_blank">Source code</a></li>
               </ul>
               <hr>
-              <a href="https://play.google.com/store/apps/details?id=acr.browser.barebones" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+              <a href="https://play.google.com/store/apps/details?id=acr.browser.barebones" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download"></a>(free)</a>
               <a href="https://play.google.com/store/apps/details?id=acr.browser.lightning" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download"></a>(pro)</a>
               <a href="https://f-droid.org/repository/browse/?fdfilter=light&amp;fdid=acr.browser.lightning" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
               <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="lightningbrowser" />
@@ -332,7 +332,7 @@
         <!-- SocialNetworks:Notes -->
         <td class="notes">
           <p>Twidere might promote non-free add-ons.</p>
-          <p>Popular GNU Social instances include <a href="http://quitter.se/" target="_blank">Quitter</a>, <a href="https://loadaverage.org/" target="_blank">LoadAverage</a> or <a href="https://status.vinilox.eu/" target="_blank">Vinilox</a></p>.
+          <p>Popular GNU Social instances include <a href="http://quitter.se/" target="_blank">Quitter</a>, <a href="https://loadaverage.org/" target="_blank">LoadAverage</a> or <a href="https://status.vinilox.eu/" target="_blank">Vinilox</a>.</p>
         </td>
       </tr>
     </table>
@@ -636,7 +636,7 @@
 
           <!-- VoIP:Notes -->
           <td class="notes">
-            RedPhone uses special infrastructure, for all other apps you need a SIP account. Have a look on <a href="https://en.wikipedia.org/wiki/SIP_provider" target="_blank">Wikipedia</a> to find a SIP-provider. <a href="https://ostel.co/" target="_blank">Ostel.co</a> is a free and easy to use SIP service run by the <a href="https://guardianproject.info/" target="_blank">Guardian Project</a>.
+            RedPhone uses special infrastructure, for all other apps you need a SIP account. Have a look on <a href="https://en.wikipedia.org/wiki/SIP_provider" target="_blank">Wikipedia</a> to find a SIP-provider. <a href="https://ostel.co/" target="_blank">Ostel</a> is a free and easy to use SIP service run by the <a href="https://guardianproject.info/" target="_blank">Guardian Project</a>.
           </td>
         </tr>
       </table>
@@ -1259,29 +1259,6 @@
                 <a href="https://play.google.com/store/apps/details?id=org.openintents.filemanager" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
                 <a href="https://f-droid.org/repository/browse/?fdid=org.openintents.filemanager" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
                 <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="oifilemanager" />
-              </div>
-            </div>
-
-            <!-- File Explorer -->
-            <div class="media emph-Block">
-              <div class="media-Object">
-                <a href="#!" class="pic-Rounded">
-                  <img src="img/foss/appositedesigns.fileexplorer.png" alt="File Explorer" class="floss" />
-                </a>
-              </div>
-              <div class="media-Text">
-                <h2 class="eps">File Explorer</h2>
-                <p>
-                  Simple File Explorer.
-                </p>
-                <ul>
-                  <li>Price: Free</li>
-                  <li>Min. Android version: varies</li>
-                  <li>Source code</li>
-                </ul>
-                <hr>
-                <a href="https://play.google.com/store/apps/details?id=net.appositedesigns.fileexplorer" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
-                <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="fileexplorer" />
               </div>
             </div>
 
