--- a/index.html
+++ b/index.html
@@ -975,6 +975,7 @@
               </ul>
               <hr>
               <a href="https://play.google.com/store/apps/details?id=me.writeily.pro" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+              <a href="https://f-droid.org/repository/browse/?fdid=me.writeily.pro" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
               <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="writeilypro" />
             </div>
           </div>
