update sourc code sources
A number of projects have left Google Code since it's shutting down

--- a/index.html
+++ b/index.html
@@ -917,7 +917,7 @@
                 <ul>
                   <li>Price: Free</li>
                   <li>Min. Android version: varies</li>
-                  <li><a href="https://code.google.com/p/k9mail/">Source code</a></li>
+                  <li><a href="https://github.com/k9mail/k-9/">Source code</a></li>
                 </ul>
                 <hr>
                 <a href="https://play.google.com/store/apps/details?id=com.fsck.k9" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
@@ -1174,7 +1174,7 @@
                 <ul>
                   <li>Price: Free</li>
                   <li>Min. Android version: 2.2</li>
-                  <li><a href="http://code.google.com/p/ttrss-reader-fork/source/checkout">Source code</a></li>
+                  <li><a href="https://github.com/nilsbraden/ttrss-reader-fork/">Source code</a></li>
                 </ul>
                 <hr>
                 <a href="https://play.google.com/store/apps/details?id=org.ttrssreader" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
@@ -1278,7 +1278,7 @@
                 <ul>
                   <li>Price: Free</li>
                   <li>Min. Android version: 1.6</li>
-                  <li><a href="https://sites.google.com/site/ghostcommander1/">Source code</a></li>
+                  <li><a href="https://sourceforge.net/p/ghostcommander/code/">Source code</a></li>
                 </ul>
                 <hr>
                 <a href="https://play.google.com/store/apps/details?id=com.ghostsq.commander" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
@@ -1333,7 +1333,7 @@
                 <ul>
                   <li>Price: Free for 10 regions (unlimited regions: 5.99 &euro;)</li>
                   <li>Min. Android version: 2.1</li>
-                  <li><a href="http://code.google.com/p/osmand/">Source code</a></li>
+                  <li><a href="https://github.com/osmandapp/Osmand/">Source code</a></li>
                 </ul>
                 <hr> 
                 <a href="https://play.google.com/store/apps/details?id=net.osmand" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>(free)
@@ -1358,7 +1358,7 @@
                 <ul>
                   <li>Price: free</li>
                   <li>Min. Android version: 1.5</li>
-                  <li><a href="http://navit.sourceforge.net/">Source code</a></li>
+                  <li><a href="http://sourceforge.net/p/navit/code/">Source code</a></li>
                 </ul>
                 <hr> 
                 <a href="https://play.google.com/store/apps/details?id=org.navitproject.navit" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
@@ -1882,7 +1882,7 @@
                 <ul>
                   <li>Price: Free </li>
                   <li>Min. Android version: varies</li>
-                  <li><a href="http://code.google.com/p/zxing/">Source code</a></li>
+                  <li><a href="https://github.com/zxing/zxing/">Source code</a></li>
                 </ul>
                 <hr>
                 <a href="https://play.google.com/store/apps/details?id=com.google.zxing.client.android" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
