update categories, add security apps

--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
         <li><a href="#socialnetworks">Social Networking</a></li>
         <li><a href="#messenger">Messenger</a></li>
         <li><a href="#voip">VoIP</a></li>
-        <li><a href="#audio">Audio/Podcasts</a></li>
-        <li><a href="#video">Video</a></li>
+        <li><a href="#multimedia">Multimedia</a></li>
         <li><a href="#email">Email</a></li>
         <li><a href="#notes">Notes</a></li>
         <li><a href="#newsreader">News Reader</a></li>
@@ -79,12 +78,12 @@
         <li><a href="#keyboards">Keyboard</a></li>
         <li><a href="#cloud">Cloud</a></li>
         <li><a href="#office">Office</a></li>
-        <li><a href="#vpnclients">VPN Client</a></li>
+        <li><a href="#security">Security</a></li>
         <li><a href="#misc">Misc</a></li>
       </ul>
     </nav>
     <p>
-      <strong>Droid-Break</strong> is a list of <em>free and open source</em> Android apps inspired by <a href="https://prism-break.org" target="_blank">prism-break.org</a>.
+      <strong>Droid-Break</strong> is a list of <em>free and open source</em> Android apps inspired by <a href="https://prism-break.org" target="_blank">Prism-Break</a>.
       Our purpose is to show you <em>high quality alternatives</em> to the big proprietary solutions.<br />
       Please note that open source apps don't guarantee absolute freedom, e.g., an open source Twitter client still sends everything to Twitters' servers.<br />
       Anyway, we believe it's the best we can come up with and that in many cases it's the better choice.<br />
@@ -642,8 +641,8 @@
       </table>
       <!-- End VoIP -->
 
-      <!-- Start Audio -->
-      <h2><a id="audio">Audio Players and Podcatcher</a><a href="#top" class="topLink">^</a></h2>
+      <!-- Start Multimedia -->
+      <h2><a id="multimedia">Multimedia</a><a href="#top" class="topLink">^</a></h2>
       <table>
         <tr>
           <th>Proprietary</th>
@@ -652,7 +651,7 @@
         </tr>
 
         <tr>
-          <!-- Audio:Proprietary -->
+          <!-- Multimedia:Proprietary -->
           <td class="proprietary">
             <ul class="proprietary">
               <li><img src="img/proprietary/googleplaymusic.png" alt="Google Play Music" class="proprietary" /><br />Google Play Music</li>
@@ -665,7 +664,7 @@
             </ul>
           </td>
 
-          <!-- Audio:Free alternative -->
+          <!-- Multimedia:Free alternative -->
 
           <td>
             <!-- Vanilla Music -->
@@ -817,69 +816,12 @@
 
           </td>
 
-          <!-- Audio:Notes -->
+          <!-- Multimedia:Notes -->
           <td class="notes">
           </td>
         </tr>
       </table>
-      <!-- End Audio -->
-
-
-      <!-- Start Video -->
-      <h2><a id="video">Video</a><a href="#top" class="topLink">^</a></h2>
-
-      <table>
-        <tr>
-          <th>Proprietary</th>
-          <th>Free alternative</th>
-          <th>Notes</th>
-        </tr>
-
-        <tr>
-          <!-- Video:Proprietary -->
-          <td class="proprietary">
-            <ul class="proprietary">
-              <li><img src="img/proprietary/mxplayer.png" alt="mx player" class="proprietary" /><br />MX Player</li>      
-              <li><img src="img/proprietary/winamp.png" alt="winamp" class="proprietary" /><br />Winamp</li>
-            </ul>
-          </td>
-
-          <!-- Video:Free alternative -->
-          <td>
-
-            <!-- VLC -->
-            <div class="media emph-Block">
-              <div class="media-Object">
-                <a href="#!" class="pic-Rounded">
-                  <img src="img/foss/vlc.png" alt="vlc" class="floss" />
-                </a>
-              </div>
-              <div class="media-Text">
-                <h2 class="eps">VLC</h2>
-                <p>
-                  VLC is a well known media player.<br />
-                  It supports many file formats.
-                </p>
-                <ul>
-                  <li>Price: Free</li>
-                  <li>Min. Android version: 2.1</li>
-                  <li><a href="http://wiki.videolan.org/Developers_Corner">Source code</a></li>
-                </ul>
-                <hr>
-                <a href="https://play.google.com/store/apps/details?id=org.videolan.vlc" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
-                <a href="https://f-droid.org/repository/browse/?fdid=org.videolan.vlc" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
-                <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="vlc" />
-              </div>
-            </div>
-          </td>
-
-          <!-- Video:Notes -->
-          <td class="notes">
-            We are still missing some good alternatives here. Know any? Write an <a href="support.html">email or fork the project on GitHub</a> and add your favourite FOSS video player via pull-request. 
-          </td>
-        </tr>
-      </table>
-      <!-- End Video -->
+      <!-- End Multimedia -->
 
       <!-- Start EMail -->
       <h2><a id="email">Email</a><a href="#top" class="topLink">^</a></h2>
@@ -1739,8 +1681,8 @@
       </table>
       <!-- End Office -->
 
-      <!-- Start VPNClients -->
-      <h2><a id="vpnclients">VPN Client</a><a href="#top" class="topLink">^</a></h2>
+      <!-- Start Security -->
+      <h2><a id="security">Security</a><a href="#top" class="topLink">^</a></h2>
       <table>
         <tr>
           <th>Proprietary</th>
@@ -1749,18 +1691,115 @@
         </tr>
 
         <tr>
-          <!-- VPNClients:Proprietary -->
+          <!-- Security:Proprietary -->
           <td class="proprietary">
             <ul class="proprietary">
+              <li><img src="img/proprietary/googleauthenticator.png" alt="Google Authenticator" class="proprietary" /><br />Google Authenticator</li>
+              <li><img src="img/proprietary/lastpass.png" alt="LastPass" class="proprietary" /><br />LastPass</li>
+              <li><img src="img/proprietary/avastantitheft.png" alt="Avast Anti-Theft" class="proprietary" /><br />Avast Anti-Theft</li>
               <li><img src="img/proprietary/anyconnect.png" alt="AnyConnect" class="proprietary" /><br />Cisco AnyConnect</li>
               <li><img src="img/proprietary/openvpn-connect.png" alt="OpenVPN Connect" class="proprietary" /><br />OpenVPN Connect</li>
               <li><img src="img/proprietary/pia.png" alt="Private Internet Access" class="proprietary" /><br />Private Internet Access</li>
-              <li><img src="img/proprietary/hola.png" alt="Hola Free VPN" class="proprietary" /><br />Hola Free VPN</li>
             </ul>
           </td>
 
-          <!-- VPNClients:Free alternative -->
+          <!-- Security:Free alternative -->
           <td>
+
+          <!-- FreeOTP -->
+          <div class="media emph-Block">
+            <div class="media-Object">
+              <a href="#!" class="pic-Rounded">
+                <img src="img/foss/freeotp.png" alt="FreeOTP" class="floss" />
+              </a>
+            </div>
+            <div class="media-Text">
+              <h2 class="eps">FreeOTP</h2>
+              <p>
+                FreeOTP is a <a href="https://en.wikipedia.org/wiki/Two_factor_authentication" target="_blank">two factor</a> a.k.a two-step authentication client that helps increase the security of your online accounts.
+              </p>
+              <ul>
+                <li>Price: Free</li>
+                <li>Min. Android version: 4.0</li>
+                <li><a href="https://fedorahosted.org/freeotp/browser/android" target="_blank">Source code</a></li>
+              </ul>
+              <hr>
+              <a href="https://play.google.com/store/apps/details?id=org.fedorahosted.freeotp" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+              <a href="https://f-droid.org/repository/browse/?fdid=org.fedorahosted.freeotp" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
+              <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="freeotp" />
+            </div>
+          </div>
+
+          <!-- KeePassDroid -->
+          <div class="media emph-Block">
+            <div class="media-Object">
+              <a href="#!" class="pic-Rounded">
+                <img src="img/foss/keepassdroid.png" alt="KeePassDroid" class="floss" />
+              </a>
+            </div>
+            <div class="media-Text">
+              <h2 class="eps">KeePassDroid</h2>
+              <p>
+                KeePassDroid is a password manager that stores your passwords in an encrypted database which can be unlocked with a master password. Passwords can then easily be entered into webpages or applications by copying them to the clipboard. The desktop counterpart is <a href="http://keepass.info/" target="_blank">KeePass</a>.
+              </p>
+              <ul>
+                <li>Price: Free</li>
+                <li>Min. Android version: 1.5</li>
+                <li><a href="https://github.com/bpellin/keepassdroid" target="_blank">Source code</a></li>
+              </ul>
+              <hr>
+              <a href="https://play.google.com/store/apps/details?id=com.android.keepass" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+              <a href="https://f-droid.org/repository/browse/?fdid=com.android.keepass" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
+              <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="keepassdroid" />
+            </div>
+          </div>
+
+          <!-- Wi-Fi Privacy Police -->
+          <div class="media emph-Block">
+            <div class="media-Object">
+              <a href="#!" class="pic-Rounded">
+                <img src="img/foss/wifiprivacypolice.png" alt="Wi-Fi Privacy Police" class="floss" />
+              </a>
+            </div>
+            <div class="media-Text">
+              <h2 class="eps">Wi-Fi Privacy Police</h2>
+              <p>
+                Wi-Fi Privacy Police prevents your device from leaking private information through everyday use of Wi-Fi. This information could be used to track your movements, identify your home or workplace, and force your device to connect to a malicious Wi-Fi network. More information <a href="https://brambonne.com/docs/bonne14sasquatchprivacypolice.pdf" target="_blank">here (PDF)</a>.
+              </p>
+              <ul>
+                <li>Price: Free</li>
+                <li>Min. Android version: 2.0</li>
+                <li><a href="https://github.com/BramBonne/privacypolice" target="_blank">Source code</a></li>
+              </ul>
+              <hr>
+              <a href="https://play.google.com/store/apps/details?id=be.uhasselt.privacypolice" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+              <a href="https://f-droid.org/repository/browse/?fdid=be.uhasselt.privacypolice" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
+              <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="wifiprivacypolice" />
+            </div>
+          </div>
+
+            <!-- Prey-->
+            <div class="media emph-Block">
+              <div class="media-Object">
+                <a href="#!" class="pic-Rounded">
+                  <img src="img/foss/prey.png" alt="prey" class="floss" />
+                </a>
+              </div>
+              <div class="media-Text">
+                <h2 class="eps">Prey</h2>
+                <p>
+                  Prey tracks your stolen phone/tablet and gives you full control over it like camera, GPS, SMS, email etc
+                </p>
+                <ul>
+                  <li>Price: Free </li>
+                  <li>Min. Android version: 1.6</li>
+                  <li><a href="https://github.com/prey/prey-android-client">Source code</a></li>
+                </ul>
+                <hr>
+                <a href="https://play.google.com/store/apps/details?id=com.prey" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+                <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="prey" />
+              </div>
+            </div>  
 
             <!-- OpenConnect -->
             <div class="media emph-Block">
@@ -1812,12 +1851,17 @@
 
           </td>
 
-          <!-- VPNClients:Notes -->
+          <!-- Security:Notes -->
           <td class="notes">
+			<p>
+              Do your web services support two factor authentication? Search <a href="https://twofactorauth.org/" target="_blank">here</a> for a green checkmark under the software implementation column. 
+          </p>
+          <p>Create a strong master password using the <a href="http://diceware.com/" target="_blank">Diceware</a> method.
+            </p>
           </td>
         </tr>
       </table>
-      <!-- End VPNClients -->
+      <!-- End Security -->
 
       <!-- Start Misc -->
       <h2><a id="misc">Misc</a><a href="#top" class="topLink">^</a></h2>
@@ -1837,7 +1881,6 @@
               <li>System Tools</li>
               <li>Geocaching</li>
               <li>Google Translate</li>
-              <li>Anti-theft</li>
               <li>Flappy Bird</li>
             </ul>
           </td>
@@ -1938,29 +1981,6 @@
               <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="mitzuli" />
             </div>
           </div>
-
-            <!-- Prey-->
-            <div class="media emph-Block">
-              <div class="media-Object">
-                <a href="#!" class="pic-Rounded">
-                  <img src="img/foss/prey.png" alt="prey" class="floss" />
-                </a>
-              </div>
-              <div class="media-Text">
-                <h2 class="eps">Prey</h2>
-                <p>
-                  Prey tracks your stolen phone/tablet and gives you full control over it like camera, GPS, SMS, email etc
-                </p>
-                <ul>
-                  <li>Price: Free </li>
-                  <li>Min. Android version: 1.6</li>
-                  <li><a href="https://github.com/prey/prey-android-client">Source code</a></li>
-                </ul>
-                <hr>
-                <a href="https://play.google.com/store/apps/details?id=com.prey" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
-                <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="prey" />
-              </div>
-            </div>   
 
             <!-- FlappyCow-->
             <div class="media emph-Block">
